--- a/src/presentation/pages/Home/components/PokeCard/styles.scss
+++ b/src/presentation/pages/Home/components/PokeCard/styles.scss
@@ -1,6 +1,7 @@
 .pokeCard {
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: 240px;
   margin: 0 auto;
   overflow: hidden;
