--- a/src/presentation/pages/Home/components/Input/styles.scss
+++ b/src/presentation/pages/Home/components/Input/styles.scss
@@ -5,11 +5,21 @@
   padding: 1rem;
   display: flex;
   justify-content: center;
+  max-width: 500px;
+  margin: auto;
   
+  &__form {
+    display: flex;
+    width: 100%;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+
   &__input {
     padding: 0.5rem;
     margin-right: 1rem;
-    min-width: 300px;
+    width: 100%;
+    min-width: 200px;
     border-radius: 5px;
     border: 2px solid $black;
     border-radius: 20px
