feat(presentation): add AttackModal component

--- a/src/presentation/pages/CardDetails/styles.scss
+++ b/src/presentation/pages/CardDetails/styles.scss
@@ -30,7 +30,9 @@
 
   &__attacks {
     .cardDetails__pill {
-     border: 1px solid $gray;
+      border: 1px solid $gray;
+      background: none;
+      cursor: pointer;
     }  
   }
 
