--- a/src/presentation/pages/Home/components/CardsContainer/styles.scss
+++ b/src/presentation/pages/Home/components/CardsContainer/styles.scss
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cardsContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
